[package]
name = "mysql-proxy"
description = "Extensible MySQL Proxy"
version = "0.2.1"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://github.com/AgilData/mysql-proxy-rs"
documentation = "https://github.com/AgilData/mysql-proxy-rs"
repository = "https://github.com/AgilData/mysql-proxy-rs"
license = "Apache-2.0"

[dependencies]
log = "0.3"
futures = "0.1.1"
tokio-core = "0.1.0"
env_logger = "0.3"
byteorder = "0.5.3"

[dev-dependencies]
curl = "=0.3.6"
